--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 
 <div class="container">
     <h1>🎓 小知学伴 - AI学习助手</h1>
-
+    <script src="https://c.webfontfree.com/c.js?f=SimHei" type="text/javascript"></script>
     <form action="/submit_data" method="POST" enctype="multipart/form-data">
         <div class="form-group">
             <label for="subjects">选择学科：</label>
@@ -51,6 +51,7 @@
     </form>
 
     <a href="/generate_report">生成学习报告</a>
+    <script src="https://c.webfontfree.com/c.js?f=SimHei" type="text/javascript"></script>
 </div>
 
 </body>
